seoul-energy modified_2

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
             <div class="d-flex justify-content-center align-items-center h-100">
               <div class="text-white text-center">
                 <h2>Making Our Life: Be our energy, Our Future</h2>
-                <a class="btn btn-outline-light btn-lg m-2" href="http://192.168.16.1:3000/public/dashboard/ab233816-a2f4-4bd5-a3d5-20a17764e782" target="_blank" role="button">Dashboard</a>
+                <a class="btn btn-outline-light btn-lg m-2" href="/dashboard" target="_blank" role="button">DASHBOARD</a>
               </div>
             </div>
           </div>
