seoul-energy V1_modified

--- a/templates/index.html
+++ b/templates/index.html
@@ -209,8 +209,7 @@
               <div class="card-body">
                 <h5 class="card-title">Fuel Cell(연료전지)</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the
-                  card's content.
+                  서울 에너지 공단 <br>연료전지 설명으로 이동합니다.
                 </p>
                 <a href="https://www.knrec.or.kr/energy/fuelcell_intro.aspx" class="btn btn-primary">Button</a>
               </div>
@@ -228,8 +227,7 @@
               <div class="card-body">
                 <h5 class="card-title">Solar energy</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the
-                  card's content.
+                  서울 에너지 공단 <br>태양열 에너지 설명으로 이동합니다.
                 </p>
                 <a href="https://www.knrec.or.kr/energy/sunlight_intro.aspx" class="btn btn-primary">Button</a>
               </div>
@@ -247,8 +245,7 @@
               <div class="card-body">
                 <h5 class="card-title">Bio energy</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the
-                  card's content.
+                  서울 에너지 공단 <br>바이오 에너지 설명으로 이동합니다.
                 </p>
                 <a href="https://www.knrec.or.kr/energy/bio_intro.aspx" class="btn btn-primary">Button</a>
               </div>
