Seoul-Energy modified: add intro

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
               <a class="nav-link" aria-current="page" href="#intro">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">Voice</a>
+              <a class="nav-link" href="/intro" rel="nofollow" target="_blank">Intro</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/dashboard" target="_blank">Dashboard</a>
@@ -360,22 +360,28 @@
 
     </form>
           </div>
-      {{pred}}
+          <div>Submit을 눌러 예측하러 가봅시다:)</div>
 
       <a href='/'>시작 화면으로 돌아갑니다</a>
   </div> 
       <br>
-      <h1><p><strong>Dash Board</strong></p></h1>
-      <iframe
-    src="http://192.168.16.1:3000/public/dashboard/63ef0dfe-58d1-4357-800d-f7e003a4d044"
-    frameborder="0"
-    width="1880"
-    height="950"
-    allowtransparency
-></iframe>
+      <br>
+  <div style='text-align:center;'>
+      <a href="https://youtu.be/F8wI5ZosdRA">▶ RM의 'SEOUL' MV 감상하기 (클릭)</a>
+  </div>
+      <br>
+      <br>
+  <div>
+    <h1><p><strong>Dash Board</strong></p></h1>
+    <iframe
+        src="http://192.168.16.1:3000/public/dashboard/63ef0dfe-58d1-4357-800d-f7e003a4d044"
+        frameborder="0"
+        width="1880"
+        height="950"
+        allowtransparency
+>   </iframe>
+  </div>
   
-      
-
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       2021 project
