--- a/templates/return.html
+++ b/templates/return.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body bgcolor="#ffe4e1">
-        <h1>Energy Prediction SEOUL</h1><br>
+        <h1>Energy Prediction SEOUL</h1>
         <h3>This data contains 2021-01 ~ 2021.10</h3>
 
         <div style='text-align:center;'>
