--- a/templates/return.html
+++ b/templates/return.html
@@ -6,7 +6,7 @@
     </head>
     <body bgcolor="#ffe4e1">
         <h1>Energy Prediction SEOUL</h1>
-        <h3>This data contains 2021-01 ~ 2021.10</h3>
+        <h3>This prediction model contains 2021-01 ~ 2021.10 data</h3>
 
         <div style='text-align:center;'>
             <div id='simulate'>
