--- a/templates/intro.html
+++ b/templates/intro.html
@@ -15,7 +15,7 @@
                 더불어 전력거래소의 수요자원 전력 거래 시스템의 연동 서비스를 제공합니다.<br>
                 서울에너지공단에서 제공하는 연료에 대한 설명을 연동시켜 놓았습니다.<br><br>
                 보다 나은 서울을 위해, 함께합니다.<br>
-                Better SEOUL, SEOUL-ENERGY<br><br>
+                BETTER SEOUL, SEOUL-ENERGY<br><br>
             </h4><br><br><br>
                 
             
